syntax = "proto3";

package order;

message OrderItem {
  int32 quantity = 1;
  float price = 2;
  int32 itemId = 3;
}

message CreateOrderRequest {
  string userId = 2;
  repeated OrderItem orderItems = 3;
}

message CreateOrderResponse {
  bool success = 1;
}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}